feat: search wf definitions
