# internal/api/dto/workflow_definitions.go
@@ -15,10 +15,19 @@ type CreateWorkflowDefinitionRequest struct {
 } // @name CreateWorkflowDefinitionRequest
 
 type UpdateWorkflowDefinitionRequest struct {
-	Name        *string                  `json:"name" validate:"min=3,max=100"`
 	Description *string                  `json:"description,omitempty" validate:"max=500"`
 	Version     *string                  `json:"version,omitempty" validate:"wf_version"`
 	Metadata    *datatypes.JSON          `json:"metadata,omitempty"`
 	Steps       *models.WorkflowStepList `json:"steps,omitempty" validate:"gt=0,dive,required"`
 	IsEnabled   *bool                    `json:"isEnabled,omitempty"`
 } // @name UpdateWorkflowDefinitionRequest
+
+type SearchWorkflowDefinitionsRequest struct {
+	Name         *string `form:"name,omitempty"`
+	Version      *string `form:"version,omitempty" validate:"omitnil,wf_version"`
+	MajorVersion *int    `form:"majorVersion,omitempty" validate:"omitnil,gte=0"`
+	MinorVersion *int    `form:"minorVersion,omitempty" validate:"omitnil,gte=0"`
+	PatchVersion *int    `form:"patchVersion,omitempty" validate:"omitnil,gte=0"`
+	IsRelease    *bool   `form:"isRelease,omitempty"`
+	IsEnabled    *bool   `form:"isEnabled,omitempty"`
+} // @name SearchWorkflowDefinitionsRequest
